logs_latest.txt
PS C:\Users\Szymon\Desktop\MultiLauncher> ./build.bat        
Building MultiLauncher...
In file included from src\../include/MultiLauncher/Gui.hpp:2,
                 from src\../include/MultiLauncher/App.hpp:2,
                 from src\main.cpp:1:
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::update()':
src\../include/MultiLauncher/GameManager.hpp:16:50: error: 'gamesMutex' was not declared in this scope
   16 |                 std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                  ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::scanAll()':
src\../include/MultiLauncher/GameManager.hpp:25:58: error: 'gamesMutex' was not declared in this scope
   25 |                         std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                          ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'std::unique_lock<std::mutex> MultiLauncher::GameManager::lockGames() const':
src\../include/MultiLauncher/GameManager.hpp:45:53: error: 'gamesMutex' was not declared in this scope
   45 |                 return std::unique_lock<std::mutex>(gamesMutex);
      |                                                     ^~~~~~~~~~
In file included from src\../include/MultiLauncher/Gui.hpp:2,
                 from src\../include/MultiLauncher/App.hpp:2,
                 from src\App.cpp:1:
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::update()':
src\../include/MultiLauncher/GameManager.hpp:16:50: error: 'gamesMutex' was not declared in this scope
   16 |                 std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                  ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::scanAll()':
src\../include/MultiLauncher/GameManager.hpp:25:58: error: 'gamesMutex' was not declared in this scope
   25 |                         std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                          ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'std::unique_lock<std::mutex> MultiLauncher::GameManager::lockGames() const':
src\../include/MultiLauncher/GameManager.hpp:45:53: error: 'gamesMutex' was not declared in this scope
   45 |                 return std::unique_lock<std::mutex>(gamesMutex);
      |                                                     ^~~~~~~~~~
In file included from src\../include/MultiLauncher/Gui.hpp:2,
                 from src\Gui.cpp:1:
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::update()':
src\../include/MultiLauncher/GameManager.hpp:16:50: error: 'gamesMutex' was not declared in this scope
   16 |                 std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                  ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'void MultiLauncher::GameManager::scanAll()':
src\../include/MultiLauncher/GameManager.hpp:25:58: error: 'gamesMutex' was not declared in this scope
   25 |                         std::lock_guard<std::mutex> lock(gamesMutex);
      |                                                          ^~~~~~~~~~
src\../include/MultiLauncher/GameManager.hpp: In member function 'std::unique_lock<std::mutex> MultiLauncher::GameManager::lockGames() const':
src\../include/MultiLauncher/GameManager.hpp:45:53: error: 'gamesMutex' was not declared in this scope
   45 |                 return std::unique_lock<std::mutex>(gamesMutex);
      |                                                     ^~~~~~~~~~

Build failed
Press any key to continue . . .
PS C:\Users\Szymon\Desktop\MultiLauncher> 